[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "prunnerai-cli"
version = "3.2.0"
description = "PrunnerAI CLI — Sovereign AI command & control for your local machine"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.7"
authors = [
    {name = "PrunnerAI"}
]

[project.optional-dependencies]
ai = ["torch", "transformers", "huggingface_hub"]
gui = ["fastapi", "uvicorn[standard]"]

[project.scripts]
prunnerai = "prunnerai.cli:main"
